deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: words
spec:
  replicas: 1
  selector:
    matchLabels:
      app: words
  template:
    metadata:
      labels:
        app: words
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
        - name: words
          image: ghcr.io/desecho/words-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: api.words.samarchyan.me
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: api.words.samarchyan.me
            initialDelaySeconds: 5
            periodSeconds: 5
        - name: frontend
          image: ghcr.io/desecho/words-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
