deployment/ingress_backend.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: words-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.words.samarchyan.me
      secretName: words-backend-tls
  rules:
    - host: api.words.samarchyan.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: words-backend
                port:
                  number: 80
