deployment/ingress_frontend.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: words-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - words.samarchyan.me
      secretName: words-frontend-tls
  rules:
    - host: words.samarchyan.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: words-frontend
                port:
                  number: 80
